// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header > should render an header 1`] = `
<DocumentFragment>
  <div
    class="bg-theme-background flex items-end justify-between"
  >
    <div
      class="space-y-2"
    >
      <div
        class="flex items-center gap-3"
      >
        <h1
          class="mb-0 text-2xl leading-[29px]"
          data-testid="header__title"
        >
          Header test
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Header > should render an header with a subtitle 1`] = `
<DocumentFragment>
  <div
    class="bg-theme-background flex items-end justify-between"
  >
    <div
      class="space-y-2"
    >
      <div
        class="flex items-center gap-3"
      >
        <h1
          class="mb-0 text-2xl leading-[29px]"
          data-testid="header__title"
        >
          Header test
        </h1>
      </div>
      <div
        class="text-theme-secondary-text flex items-center text-sm leading-6 md:text-base md:leading-6"
        data-testid="header__subtitle"
      >
        Subtitle test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Header > should render an header with extra 1`] = `
<DocumentFragment>
  <div
    class="bg-theme-background flex items-end justify-between"
  >
    <div
      class="space-y-2"
    >
      <div
        class="flex items-center gap-3"
      >
        <h1
          class="mb-0 text-2xl leading-[29px]"
          data-testid="header__title"
        >
          Header test
        </h1>
      </div>
      <div
        class="text-theme-secondary-text flex items-center text-sm leading-6 md:text-base md:leading-6"
        data-testid="header__subtitle"
      >
        Subtitle test
      </div>
    </div>
    <div>
      <div
        class="flex justify-end space-x-3"
      >
        <button
          class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-600"
          data-testid="header__extra"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            Extra 1
          </div>
        </button>
        <button
          class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-600"
          data-testid="header__extra"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            Extra 2
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageHeader > should render responsive (md) 1`] = `
<DocumentFragment>
  <div
    class="w-full py-4 first:pt-8 last:pb-8"
  >
    <div
      class="mx-auto px-6 md:px-10 lg:container"
    >
      <div
        class="bg-theme-background flex items-end justify-between"
      >
        <div
          class="space-y-2"
        >
          <div
            class="flex items-center gap-3"
          >
            <div
              class="flex flex-col gap-2"
            >
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Header test
              </h1>
               
              <div
                class="text-theme-secondary-text flex items-center text-sm leading-6 md:text-base md:leading-6"
                data-testid="header__subtitle"
              >
                Subtitle test
              </div>
            </div>
          </div>
        </div>
        <div>
          extra
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageHeader > should render responsive (xs) 1`] = `
<DocumentFragment>
  <section
    class="bg-theme-secondary-100 dim:bg-theme-dim-950 flex w-full items-center justify-between px-8 py-6 md:h-13 dark:bg-black"
  >
    <div
      class="flex flex-col gap-2"
    >
      <h1
        class="mb-0 text-lg font-semibold"
      >
        Header test
      </h1>
      <div
        class="text-theme-secondary-text flex items-center text-sm leading-5"
      >
        Subtitle test
      </div>
    </div>
    extra
  </section>
</DocumentFragment>
`;
